Refactor : 도메인 구조에 맞게 컴포넌트를 생성 및 패키지구조 변경